@@ -3,6 +3,21 @@
   "uniques": 0,
   "views": [
     {
+      "timestamp": "2026-01-26T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-27T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-28T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
       "timestamp": "2026-01-29T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -54,21 +69,6 @@
     },
     {
       "timestamp": "2026-02-08T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-09T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-10T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-11T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
